🔨 Refactor: 用其淫巧既暫時處理一下

--- a/src/pages/tabs-page/tabs-page.scss
+++ b/src/pages/tabs-page/tabs-page.scss
@@ -5,3 +5,7 @@
 .tab-button {
   max-width: 200px;
 }
+
+#tab-t1-4, #tab-t1-5, #tab-t1-6, #tab-t1-7, #tab-t1-8, #tab-t1-9, #tab-t1-10 {
+    display: none;
+}
