--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -5,7 +5,7 @@
 
     <ion-header>
       <ion-toolbar>
-        <ion-title>選單</ion-title>
+        <ion-title>Menu</ion-title>
       </ion-toolbar>
     </ion-header>
 
@@ -13,7 +13,7 @@
 
       <ion-list>
         <ion-list-header>
-          新聞類別
+          News Category
         </ion-list-header>
         <button ion-item menuClose *ngFor="let p of appPages" (click)="openPage(p)">
           <ion-icon item-start [name]="p.icon" [color]="isActive(p)"></ion-icon>
