--- a/src/pages/tabs-page/tabs-page.scss
+++ b/src/pages/tabs-page/tabs-page.scss
@@ -8,4 +8,10 @@
 
 #tab-t1-4, #tab-t1-5, #tab-t1-6, #tab-t1-7, #tab-t1-8, #tab-t1-9, #tab-t1-10 {
     display: none;
+    visibility: hidden;
+}
+
+#tab-t0-4, #tab-t0-5, #tab-t0-6, #tab-t0-7, #tab-t0-8, #tab-t0-9, #tab-t0-10 {
+    display: none;
+    visibility: hidden;
 }
